<resources>
    <string name="app_name">KonwNow</string>

    <!-- Common-->
    <string name="start">시작 하기</string>
    <string name="close">종료하시겠습니까?</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">회원가입 및 이메일 로그인</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signin_twitter">Twitter으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="test">Test</string>
    <string name="ranking">Ranking</string>
    <string name="mypage">MyPage</string>

    <!-- User -->
    <string name="user_level">Lv. %d</string>


    <!-- Test -->
    <string name="test_title">단어 시험</string>
    <string name="word_puzzle">단어 퍼즐 맞추기</string>
    <string name="word_dictation">단어 받아쓰기</string>
    <string name="test_log_title">테스트 기록</string>
    <string name="reTest">시험을 다시 보시겠습니까?</string>
    <string name="firstPage">처음 페이지입니다.</string>
    <string name="lastPage">마지막 페이지입니다.</string>
    <string name="quizNum">%d / %d</string>
    <string name="closeSub">종료하시면 테스트내용은 저장되지 않습니다.</string>
    <string name="submit">제출</string>
    <string name="miss">내가 쓴 답\t\t%s</string>
    <string name="word_count">단어 수: %d</string>
    <string name="createAt">생성일자: %s</string>
    <string name="words">"단어: %s</string>

    <!-- Word -->
    <string name="not_know">몰라요</string>
    <string name="confuse">헷갈려요</string>
    <string name="know">다 외웠어요</string>

    <!-- Tag -->
    <string name="doNotKnow">doNotKnow</string>
    <string name="confused">confused</string>
    <string name="memorized">memorized</string>



    <!-- Input -->
    <string name="text_write">직접등록</string>
    <string name="image_write">사진</string>
    <string name="image_write_ment">사진을 등록해주세요</string>
    <string name="image_write_select">사진을 선택할 방법을 선택하세요</string>

    <!-- ranking -->
    <string name="ranking_most_test">시험을 가장 많이 본 사람</string>
    <string name="ranking_most_add">단어를 가장 많이 추가한 사람</string>
    <string name="ranking_highest_score">정답률이 가장 좋은 사람</string>
    <string name="rankingDate">기간 %s~</string>
    <string name="ranking_1st">1. %s</string>
    <string name="ranking_2nd">2. %s</string>
    <string name="ranking_3rd">3. %s</string>

    <!--permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="client_id">180417186984-issn9ofh90sphbjqt36uqlu24oo4k4aq.apps.googleusercontent.com</string>

    <!-- myPage -->
    <string name="AlarmTitle">데일리알람설정</string>
    <string name="AlarmNum">하루에 받을 알림 횟수를 선택하세요</string>
    <string name="AlarmTime">알림 시간대를 설정해주세요</string>



    <!-- manual -->
    <string name="wordbookManual">1. 원하는 단어장을 선택하여 단어를 외워보세요.(중복선택 가능)\n2. 우측에 위치하는 필터를 클릭하여 단어의 상태를 바꿀 수 있습니다.
    \n3. 우측 상단에 필터를 클릭하여 원하는 단어만 골라 볼 수 있니다.\n4. 좌측 상단에 토글 버튼으로 단어의 뜻을 숨기거나 나타낼 수 있습니다.</string>
    <string name="add_word_Manual">1. 문장을 입력하여 단어를 추가할 수 있습니다.\n문자입력시 단어 단위로 분리하여 단어를 제공합니다.
        \n2. 이미지를 이용하여 단어를 추가할 수 있습니다.\n이미지에서 단어를 인식하여 단어 리스트를 제공합니다.
    </string>
    <string name="test_Manual">1. 원하는 시험 방법을 선택하고, 단어장과 시험 개수를 선택하여 테스트를 진행할 수 있습니다.
        \n2. 우측 버튼을 클릭하면 현재까지의 테스트 기록을 살펴 볼 수 있습니다.
    </string>
    <string name="ranking_Manual">1. 친구 사이의 랭킹을 확인해보세요.
        \n랭킹은 주마다 초기화됩니다.
    </string>
    <string name="friend_Manual">1. 친구 코드를 발급받아 친구에게 공유해보세요.\n2. 친구 관리화면에서 친구 추가를 클릭하여 친구를 추가할 수 있습니다.
    </string>
    <string name="alarm_Manual">1. 알림을 받기 원하는 단어장과 개수를 입력하고, 시간을 설정하면 랜덤한 시간에 알림을 받을 수 있습니다.
        \n2. 알림으로 제공하는 간단한 퀴즈를 맞춰보세요.
    </string>


    <!-- alarm -->
    <string name="setAlarm">알림이 설정되었습니다</string>
    <string name="wrongAlarmTime">알림시간을 다시 설정해주세요</string>
    <string name="missNoti">입력: %s [X]   정답: %s [O]</string>
    <string name="rightNoti">Answer: %s [O]</string>
    <string name="alarmCancel">종료하시면 알람내용은 저장되지 않습니다.</string>



    <string-array name="groups_list">
        <item>전체</item>
        <item>틀린 문제</item>
        <item>휴지통</item>
    </string-array>


</resources>